# lab

./: Justfile  Labfile.test  README.md  pyproject.toml
.github/workflows/: test.yml
lab/: __init__.py  di.py  settings.py  types.py
lab/cli/: cli.py  utils.py
lab/cli/commands/: exp.py  plan.py  run.py
lab/core/: database.py  logging.py  logging.yaml  model.py  repository.py  ui.py
lab/core/messaging/: bus.py  message.py
lab/instrument/model/: instrument.py
lab/model/: __init__.py  function.py  model.py  pipeline.py  project.py  provider.py  util.py
lab/model/dataset/: dataset.py
lab/model/experiment/: __init__.py  experiment.py  propagate.py  train.py
lab/model/network/: dendrites.py  layer.py  network.py  population.py  tensor.py
lab/model/spec/: network.py
lab/parser/: labfile.lark  parser.py
lab/project/model/: ir.py  plan.py  project.py
lab/project/service/: experiment.py  labfile.py  plan.py
lab/runtime/: messages.py  orchestrator.py  runtime.py
lab/runtime/model/: context.py  execution.py  pipeline.py  project.py  run.py
lab/runtime/persistence/: memory.py  repository.py  run.py
lab/runtime/service/: pipeline.py  run.py
lab/service/: experiment.py  ir.py  labfile.py  pipeline.py  service.py
tests/: Labfile.test
tests/model/: test.yaml  test_build.py
tests/model/dataset/: test_dataset.py
tests/model/experiment/: test_data.py  test_experiment.py
tests/model/network/: test_dendrites.py  test_population.py
tests/model/spec/: test.yaml  test_spec.py
tests/model/ui/: test_plot.py
tests/parser/: Labfile.test  test_parser.py
tests/service/: test_pipeline.py
tests/unit/project/service/: plan_test.py
